--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,10 @@
 					<downloadJavadocs>true</downloadJavadocs> 
 				</configuration> 
 			</plugin> 
-
+			<plugin>
+			      <groupId>org.apache.maven.plugins</groupId>
+			      <artifactId>maven-surefire-plugin</artifactId>
+		        </plugin>			
 		</plugins> 
 	</build> 
 
