--- a/pom.xml
+++ b/pom.xml
@@ -1,53 +1,67 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-		xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-							http://maven.apache.org/maven-v4_0_0.xsd"> 
-	<modelVersion>4.0.0</modelVersion> 
-	<groupId>com.gfg.mongodbtesting</groupId> 
-	<artifactId>mongodbTesting</artifactId> 
-	<packaging>jar</packaging> 
-	<version>1.0-SNAPSHOT</version> 
-	<name>mongodbTesting</name> 
-	<url>http://maven.apache.org</url> 
-	<dependencies> 
-		<!-- mongodb dependency -->
-		<dependency> 
-			<groupId>org.mongodb</groupId> 
-			<artifactId>mongo-java-driver</artifactId> 
-			<version>2.10.1</version> 
-		</dependency> 
-		<!-- junit dependency -->
-		<dependency> 
-			<groupId>junit</groupId> 
-			<artifactId>junit</artifactId> 
-			<version>4.12</version>			 
-		</dependency> 
-	</dependencies> 
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<build> 
-		<plugins> 
-			<plugin> 
-				<groupId>org.apache.maven.plugins</groupId> 
-				<artifactId>maven-compiler-plugin</artifactId> 
-				<version>2.3.1</version> 
-				<configuration> 
-					<source>1.6</source> 
-					<target>1.6</target> 
-				</configuration> 
-			</plugin> 
-			<plugin> 
-				<groupId>org.apache.maven.plugins</groupId> 
-				<artifactId>maven-eclipse-plugin</artifactId> 
-				<configuration> 
-					<downloadSources>true</downloadSources> 
-					<downloadJavadocs>true</downloadJavadocs> 
-				</configuration> 
-			</plugin> 
+    <groupId>com.example</groupId>
+    <artifactId>mongodb-testing-example</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <junit.jupiter.version>5.8.2</junit.jupiter.version>
+        <mongodb.driver.version>4.4.3</mongodb.driver.version>
+        <testcontainers.version>1.16.0</testcontainers.version>
+    </properties>
+
+    <dependencies>
+        <!-- MongoDB Java Driver -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>${mongodb.driver.version}</version>
+        </dependency>
+
+        <!-- JUnit 5 -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- MongoDB Testcontainers -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
+            <version>${testcontainers.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
 			<plugin>
-			      <groupId>org.apache.maven.plugins</groupId>
-			      <artifactId>maven-surefire-plugin</artifactId>
-		        </plugin>			
-		</plugins> 
-	</build> 
-
-</project> 
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>	
+        </plugins>
+    </build>
+</project>
