--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,12 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.11.2</version>
+            <scope>test</scope>
+        </dependency>
         <!-- MongoDB Testcontainers -->
         <dependency>
             <groupId>org.testcontainers</groupId>
