--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,21 @@
     <groupId>com.example</groupId>
     <artifactId>mongodb-testing-example</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <repositories>
+       <repository>
+      <id>oss.sonatype.org-snapshot</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+     </repositories>
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <junit.jupiter.version>5.8.2</junit.jupiter.version>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
         <mongodb.driver.version>3.12.14</mongodb.driver.version>
         <testcontainers.version>1.16.0</testcontainers.version>
     </properties>
@@ -23,18 +33,10 @@
             <version>${mongodb.driver.version}</version>
         </dependency>
 
-        <!-- JUnit 5 -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -53,11 +55,18 @@
     </dependencies>
 
     <build>
+        <extensions>
+            <extension>
+				<groupId>org.deflaker</groupId>
+				<artifactId>deflaker-maven-extension</artifactId>
+				<version>1.4</version>
+			</extension>
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.2.5</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
@@ -66,6 +75,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
 			</plugin>	
         </plugins>
     </build>
