--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,13 +20,24 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        maven: [ '3.5.0']
+
+    name: Maven ${{ matrix.maven }} sample
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        java-version: '8'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn test
+      - uses: actions/checkout@v3
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          java-version: '8'
+          distribution: 'temurin'
+          cache: maven
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@< version >
+        with:
+          java-version: 8
+          maven-version: ${{ matrix.maven }}
+      - name: Build with Maven
+        run: mvn test
